--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
