--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-social-media-embed": "^2.5.12",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
