--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-social-media-embed": "^2.5.12",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
   }
