--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-social-media-embed": "^2.5.12",
     "styled-components": "^6.1.8"
   },
