--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@nextui-org/accordion": "^2.0.35",
+    "@nextui-org/react": "^2.4.2",
     "@studio-freight/lenis": "^1.0.42",
+    "@szhsin/react-accordion": "^1.2.4",
+    "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "jquery": "^3.7.1",
